--- a/index.html
+++ b/index.html
@@ -272,44 +272,26 @@
 	    -->
 		<!-- End newsletter Area -->
 		<!-- Start contact Area -->
-		<!--
-		<div class="container-contact100">
-			<div class="contact100-map" id="google_map" data-map-x="40.722047" data-map-y="-73.986422" data-pin="images/icons/map-marker.png" data-scrollwhell="0" data-draggable="1"></div>
+        <section class="contact-area pt-100 pb-100">
+            <div class="container">
+                <div class="row align-items-center white-bg wrap-contact">
+                    <div class="col-lg-3 col-md-4 contact-left no-padding">
+                        <img class="mx-auto d-flex img-fluid" src="img/rsl.jpg" alt="">
+                    </div>
+                    <div class="col-lg-9 col-md-8 no-padding contact-right">
+                        <form id="myForm" action="mail.php" method="post" class="contact-form text-right">
+                            <input name="fname" placeholder="Enter your name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your name'" class="common-input mt-10" required="" type="text">
+                            <input name="email" placeholder="Enter email address" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email address'" class="common-input mt-10" required="" type="email">
+                            <textarea class="common-textarea mt-10" name="message" placeholder="Messege" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Messege'" required=""></textarea>
+                            <button class="float-left primary-btn primary circle d-inline-flex align-items-center mt-10 ml-auto"><span class="mr-10">Send Message</span><span class="lnr lnr-arrow-right"></span></button>
+                            <div class="alert-msg"></div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+
 	
-			<div class="wrap-contact100">
-				<form class="contact100-form validate-form">
-					<span class="contact100-form-title">
-						Contact Us
-					</span>
-	
-					<div class="wrap-input100 validate-input" data-validate="Please enter your name">
-						<input class="input100" type="text" name="name" placeholder="Full Name">
-						<span class="focus-input100"></span>
-					</div>
-	
-					<div class="wrap-input100 validate-input" data-validate = "Please enter email: e@a.x">
-						<input class="input100" type="text" name="email" placeholder="Email">
-						<span class="focus-input100"></span>
-					</div>
-	
-					<div class="wrap-input100 validate-input" data-validate = "Please enter your message">
-						<textarea class="input100" name="message" placeholder="Your Message"></textarea>
-						<span class="focus-input100"></span>
-					</div>
-	
-					<div class="container-contact100-form-btn">
-						<button class="contact100-form-btn">
-							Send Email
-						</button>
-					</div>
-				</form>
-	
-				<div class="contact100-more">
-					Contact our 24/7 call center: <span class="contact100-more-highlight">+001 345 6889</span>
-				</div>
-			</div>
-		</div>
-	-->
 		<!-- End contact Area -->
 		<!-- Start Footer Area -->
 		<footer class="footer-area pt-40 pb-40">
